--- a/UnityProject/UnityProject.csproj
+++ b/UnityProject/UnityProject.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\ColorChanger.cs" />
+    <Compile Include="Assets\Scripts\GameModeManager.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
     <Compile Include="Assets\Scripts\Kugel.cs" />
     <Compile Include="Assets\Scripts\Kugelspawner.cs" />
